ingress/admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: admin.hostip.nip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: admin-panel-public-service
              port:
                number: 80
