ingress/ingress_kong.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: kong.hostip.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: public-system-kong-service
            port:
              number: 8000
