ingress/www.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: www.hostip.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-portal-public-service
            port:
              number: 80
